--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,34 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 
+google-services.json
+GoogleService-Info.plist
+firebase_app_id_file.json
+firebase_options.dart
+.firebaserc
+firebase.json
+firestore.rules
+firestore.indexes.json
+
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+
+*-service-account-key.json
+serviceAccountKey.json
+service-account-*.json
+
+# Environment variables
+.env
+.env.*
+
+# Coverage
+coverage/
+*.lcov
+
 # Miscellaneous
 *.class
 *.log
@@ -155,3 +183,4 @@ coverage/
 !**/ios/**/default.mode2v3
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
+!/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
